<resources>
    <string name="app_name">FoodCriticApp</string>
    <string name="usernameLable">username</string>
    <string name="saveLable">Save</string>
    <string name="title_activity_list_input">ListInputActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="addUserLable">Add a user</string>
    <string name="addReviewLable">Add Review</string>
    <string name="ReviewLable">add review</string>
    <string name="backLable">Back</string>
    <string name="listReviewLable">List Reviews</string>
    <string name="foodItemLable">"Food Name "</string>
    <string name="foodNameInput">"food name "</string>
    <string name="FoodInput">Input food name</string>
    <string name="foodInp" />
    <string name="FoodCriticApp">"Food Reviews "</string>
    <string name="inputReviewLable" />
    <string name="FoodPriceLable">"Food Price "</string>
    <string name="foodPriceInput" />
    <string name="PriceLable" />
</resources>