<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ReviewLable"
        app:layout_constraintBottom_toTopOf="@+id/userReviewInput"
        app:layout_constraintStart_toStartOf="@+id/userReviewInput" />

    <Button
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/saveLable"
        app:layout_constraintEnd_toEndOf="@+id/userReviewInput"
        app:layout_constraintTop_toBottomOf="@+id/userReviewInput" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/backLable"
        app:layout_constraintStart_toStartOf="@+id/userReviewInput"
        app:layout_constraintTop_toBottomOf="@+id/userReviewInput" />

    <EditText
        android:id="@+id/userReviewInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="@string/inputReviewLable"
        app:layout_constraintEnd_toEndOf="@+id/foodPriceInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/foodPriceInput"
        app:layout_constraintTop_toBottomOf="@+id/foodPriceInput" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/foodItemLable"
        app:layout_constraintBottom_toTopOf="@+id/foodItemInput"
        app:layout_constraintStart_toStartOf="@+id/foodItemInput" />

    <EditText
        android:id="@+id/foodItemInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/foodInp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/FoodPriceLable"
        app:layout_constraintBottom_toTopOf="@+id/foodPriceInput"
        app:layout_constraintStart_toStartOf="@+id/foodPriceInput" />

    <EditText
        android:id="@+id/foodPriceInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="@string/PriceLable"
        app:layout_constraintEnd_toEndOf="@+id/foodItemInput"
        app:layout_constraintStart_toStartOf="@+id/foodItemInput"
        app:layout_constraintTop_toBottomOf="@+id/foodItemInput" />

</androidx.constraintlayout.widget.ConstraintLayout>