<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/foodReviewText"
        android:layout_width="108dp"
        android:layout_height="29dp"
        android:autoSizeMinTextSize="50dp"
        android:text="@string/FoodCriticApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <Button
        android:id="@+id/addReviewbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/addReviewLable"
        app:layout_constraintEnd_toEndOf="@+id/foodReviewText"
        app:layout_constraintStart_toStartOf="@+id/foodReviewText"
        app:layout_constraintTop_toBottomOf="@+id/foodReviewText" />

    <Button
        android:id="@+id/ListReviewbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/listReviewLable"
        app:layout_constraintEnd_toEndOf="@+id/addReviewbtn"
        app:layout_constraintStart_toStartOf="@+id/addReviewbtn"
        app:layout_constraintTop_toBottomOf="@+id/addReviewbtn" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Close App"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>